fixed global.css link

--- a/week-2/Kendl-exercise2.html
+++ b/week-2/Kendl-exercise2.html
@@ -8,7 +8,7 @@
 
         <!-- Link to External Stylesheet -->
 
-        <link rel="stylesheet" type="text/css" href="global.css">
+        <link rel="stylesheet" type="text/css" href="../global.css">
 
         <!-- Google Font Kit for Oswald -->
 
@@ -28,7 +28,7 @@
 
             <br />
             
-            <a class="return-home" href="index.html">Return</a>
+            <a href="index.html" class="return-home">Return</a>
  
             <script>
                 /* Opening Programmer's Comment
