--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                 <ul>
                     <li><a href="week-2/Kendl-exercise2.html">Exercise 2.2</a></li>
-                    <li>Assignment 2.3</li>
+                    <li><a href="week-2/Kendl-payroll.html">Assignment 2.3</a></li>
                     <li>Assignment 3.2</li>
                     <li>Assignment 4.2</li>
                     <li>Assignment 5.2</li>
