fixed comments on payroll css and index

--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!--
+============================================
+; Title: Landing Page
+; Author: Professor Krasso 
+; Date: 29 October 2021
+; Modified By: Laura Kendl
+; Description: This website contains WEB-231 
+; exercises and assignments. 
+;===========================================
+-->
+
 <!DOCTYPE html>
 
 <html lang="en">
