--- a/week-2/Kendl-payroll.html
+++ b/week-2/Kendl-payroll.html
@@ -6,6 +6,7 @@
 ; Modified By: Laura Kendl
 ; Description: This program demonstrates 
 ; how to declare and define JavaScript variables. 
+; Resources: https://www.w3schools.com/jsref/prop_html_innerhtml.asp (document.getElementById)
 ;===========================================
 -->
 
