added resource in comments

--- a/week-2/Kendl-exercise2.html
+++ b/week-2/Kendl-exercise2.html
@@ -6,6 +6,7 @@
 ; Modified By: Laura Kendl
 ; Description: This program demonstrates 
 ; how to add JavaScript to an HTML page. 
+; Resources: https://www.w3schools.com/js/tryit.asp?filename=tryjs_alert (Button Alert [W3Sschools])
 ;===========================================
 -->
 
