--- a/week-3/Kendl-temp-conversion.html
+++ b/week-3/Kendl-temp-conversion.html
@@ -73,8 +73,8 @@
             <div id="form-results-example">
                 <div class="card">
                     <div class="card-title">Conversion Results</div>
-                    <div class="card-content">
-                        <p id="results"></p>
+                    <div class="card-content" id="results-container">
+                        <span id="results"></span>
                     </div>
 
                     </div>
