--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <li><a href="week-2/Kendl-payroll.html">Assignment 2.3</a></li>
                     <li><a href="week-3/Kendl-temp-conversion.html">Assignment 3.2</a></li>
                     <li><a href="week-4/Kendl-number-game.html">Assignment 4.2</a></li>
-                    <li>Assignment 5.2</li>
+                    <li><a href="week-5/Kendl-sequence-game.html">Assignment 5.2</a></li>
                     <li>Assignment 6.2</li>
                     <li>Assignment 7.2</li>
                     <li>Assignment 8.2</li>
