--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 ============================================
 ; Title: Landing Page
 ; Author: Professor Krasso 
-; Date: 29 October 2021
+; Date: 21 November 2021
 ; Modified By: Laura Kendl
 ; Description: This website contains WEB-231 
 ; exercises and assignments. 
@@ -45,7 +45,7 @@
                     <li><a href="week-3/Kendl-temp-conversion.html">Assignment 3.2</a></li>
                     <li><a href="week-4/Kendl-number-game.html">Assignment 4.2</a></li>
                     <li><a href="week-5/Kendl-sequence-game.html">Assignment 5.2</a></li>
-                    <li>Assignment 6.2</li>
+                    <li><a href="week-6/Kendl-in-n-out-books.html">Assignment 6.2</a></li>
                     <li>Assignment 7.2</li>
                     <li>Assignment 8.2</li>
                 </ul>
