--- a/week-6/Kendl-in-n-out-books.html
+++ b/week-6/Kendl-in-n-out-books.html
@@ -41,7 +41,7 @@
 
         <div id="container">
 
-            <h1 class="app-header">Welcome to In-N-Out Books</h1>
+            <h1 class="app-header">Welcome to In-N-Out-Books</h1>
 
             <div id="card-example">
                 <div class="card">
