--- a/week-7/Kendl-javazon.html
+++ b/week-7/Kendl-javazon.html
@@ -5,7 +5,8 @@
 ; Date: 3 December 2021
 ; Modified By: Laura Kendl
 ; Description: This application demonstrates 
-; how to classes in a JavaScript program.; creating an application called In-N-Out-Books.
+; how to use classes in a JavaScript program.
+; creating an application called Javazon.
 ; Resources: 
 ; W3Schools: https://www.w3schools.com/jsref/tryit.asp?filename=tryjsref_tofixed (Setting decimal placement to two)
 ; Mozilla: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Classes (Create Objects)
