--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <li><a href="week-5/Kendl-sequence-game.html">Assignment 5.2</a></li>
                     <li><a href="week-6/Kendl-in-n-out-books.html">Assignment 6.2</a></li>
                     <li><a href="week-7/Kendl-javazon.html">Assignment 7.2</a></li>
-                    <li>Assignment 8.2</li>
+                    <li><a href="week-8/Kendl-alphabet-game.html">Assignment 8.2</a></li>
                 </ul>
 
             <h3>Projects</h3>
