added class input to input field

--- a/week-8/Kendl-alphabet-game.html
+++ b/week-8/Kendl-alphabet-game.html
@@ -49,7 +49,7 @@
                             <div class="form">
                                 <div class="form-field">
                                     <label for="txtPosition" class="alphabet-label">Alphabet Letter Position</label>
-                                    <input type="text" id="txtPosition" name="txtPosition">
+                                    <input type="text" id="txtPosition" name="txtPosition" class="input">
                                 </div>
                                 <div class="form-field">
 
