removed let x; added let to 'for (let x in alphabet)...'

--- a/week-8/Kendl-alphabet-game.html
+++ b/week-8/Kendl-alphabet-game.html
@@ -98,8 +98,7 @@ let alphabetOutput = "";
 
 //-- FOR/IN LOOP --//
 //Iterate over the alphabet array with alphabetOutput variable with comma
-let x;
-for (x in alphabet) {
+for (let x in alphabet) {
     alphabetOutput += alphabet[x] + ", ";
 }
 
