--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <h3>Projects</h3>
               
                 <ul>
-                    <li>Final: Card Game</li>
-                    <li>bioSite Project Home Page</li>
+                    <li><a href="week-9/Kendl-card-game.html">Final: Card Game</a></li>
+                    <li><a href="https://lkendl.github.io/bioSite/landingpage.html">bioSite Project Home Page</a></li>
                 </ul>
 
             <h4>Important Links</h4>
