--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               
                 <ul>
                     <li><a href="week-9/Kendl-card-game.html">Final: Card Game</a></li>
-                    <li><a href="https://lkendl.github.io/bioSite/landingpage.html">bioSite Project Home Page</a></li>
+                    <li><a href="https://github.com/lkendl/bioSite">bioSite Project Home Page</a></li>
                 </ul>
 
             <h4>Important Links</h4>
